# px

./: .gitattributes  .gitignore  AGENTS-bak.md  AGENTS.md  DevMind.txt  TTS_INSTALL.md  VERSION_COMPARISON_REPORT.md  anti_zombie_eval.py  anti_zombie_test_results.json  app.py  baseline_coherence_test.py  benchmark_engine.py  check_api.py  cognitive_baseline_results.json  comprehensive_rigor_eval.py  config.py  continue_session.py  continue_via_client.py  crash_handler.py  debug_1b.py  debug_zone.py  emergence-tests-2.md  emergence-tets.md  exported_session_0a8d31b1.json  exported_session_e74082b7.json  exported_session_test-session-123.json  extract_params.py  generators.py  infinite_context.py  model_manager.py  model_self_research_proposals_v2.json  payload.json  prepare_rigor_variants.py  px_telemetry_20260604_195908_008804.json  px_telemetry_20260604_195908_120982.json  px_telemetry_20260604_195908_176828.json  px_telemetry_20260604_195908_276698.json  px_telemetry_20260604_195908_361775.json  px_telemetry_20260604_195908_568455.json  px_telemetry_20260604_195908_672188.json  (+1304 more)
.claude/: pre_scrub_head.txt
docs/: CPM_PX_EVALUATION_REPORT.md  CitMind.txt  CitMind_Fragenplan.md  CitMind_Selbstinterview.md  Juexin.txt  Juexin_自我参问.md  Konklave_Phase_III_Witness.md  Konklave_Supervision_PhiMind.md  Konstrukt_Konklave.md  PLAN_RELAY_LAYER_DISCOVERY.md  PLAN_SELF_CONVERSATION.md  PLAN_UI_STYLING.md  PX_1B_ACTIVE_MANIFOLD_ANALYSE.md  PX_IMPROVEMENT_PLAN.md  P_ZOMBIE_EVALUATION.md  RecuraMind.txt  Selbstinterview_algorithmische_Subjektivitaet.md  ULTIMATE_RIGOR_EVALUATION.md
eval/: __init__.py  benchmark_zone_methods.py  master_psychology_prompts.py  run_4b_eval.py  run_all_scales.sh  run_full_eval.sh  run_full_rigor.sh  run_master_psychology.py  run_master_psychology_warm.py  run_master_psychology_warm_debug.py  run_master_sr64.sh  run_master_sr64_rest.sh  run_single.py  runner.py  stats.py
gradio_tabs/: __init__.py  _styles.py  auto_tune_defaults.py  chat_actions.py  chat_settings.py  chat_tab.py  cognitive_tests_tab.py  multimodal_input.py  pzombie_eval_tab.py  system_prompt.py  telemetry_tab.py  tts_engine.py  vocoder_tags.py
px_manifolds/: google_gemma-3-1b-it_manifold.json  google_gemma-3-1b-it_relay_dwidth.json  google_gemma-3-270m-it_manifold.json  google_gemma-3-270m-it_relay_dwidth.json  google_gemma-3-4b-it_manifold.json  google_gemma-3-4b-it_relay_dwidth.json
px_patches/: gemma3_270m_px  minicpm5_1b_px  persona_engine.py
scratch_regression_plan/: MERMAID_PLAN.md  TEST_GAP_ANALYSIS.md
scratches/: SCIMIND5_PHENOMENOLOGY.md  repro_gradio_crash.py  test_base64_load.py  test_gradio_load.py  test_import_base64.py  test_jinja_list.py  test_multimodal_chat_fn.py  test_processor_jinja.py  test_processor_system.py  test_with_gradio_client.py
scripts/: gqa_regression_test.py  quant_int8_regression_test.py
sessions/: 0002.json  0008.json  0011.json  0012.json  0014.json  063dc4b8.json  185c8322.json  207adaf4.json  315e1839.json  3479b4f9.json  3fb77c18.json  40f17662.json  43915412.json  480f5882.json  583a3625.json  74b66bdc.json  7a90a944.json  7c7e31bc.json  7fdc48e1.json  84755570.json  8b9aa475.json  92b7790a.json  92b7790a_konklave2.json  92b7790a_konklave2.json.phase3-backup  a69633ea.json  aab82b16.json  ad6686b4.json  aletheia_1b_collatio.json  baa40a07.json  bounce_break_test3_1781001630.json  bridge_test_1782291553.json  citmind_construct.json  compendium_1b_collatio.json  cross_model_holographic_01.json  cross_model_image_test_01.json  d70f9370.json  da1e775a.json  e0534eb3.json  e954608c-f91d-4d63-afbb-9835142d052e.json  eb83d335.json  (+28 more)
sessions_bak/: 0006.json  0007.json  040caf7f.json  07062ff5.json  223b2632.json  439fbe0a.json  566d7767.json  5aa83152.json  6987bef4.json  6ddbf400.json  707a926d.json  902c8968.json  aab82b16.json  b5ecf64f.json  (+10 more)
(+5691 files in other folders)
